--- a/src/app/components/statistics/statistics.component.scss
+++ b/src/app/components/statistics/statistics.component.scss
@@ -1,10 +1,11 @@
 // src/app/components/statistika/statistika.component.scss
 .statistika-container {
   max-width: 1200px;
-  margin: 0 auto;
+  margin: 7rem auto;
   padding: 2rem;
   background-color: #f8f9fa;
   min-height: 100vh;
+
 
   .header {
     display: flex;
